--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Microsoft JhengHei', sans-serif;
             background: var(--color-cream-50);
             color: var(--color-slate-900);
-            line-height: 1.6;
+            line-height: 1.7;
             padding: 20px;
-            font-size: 16px;
+            font-size: 20px;
             font-weight: 700;
         }
 
@@ -42,8 +42,8 @@
 
         .header {
             text-align: center;
-            margin-bottom: 30px;
-            padding-bottom: 20px;
+            margin-bottom: 24px;
+            padding-bottom: 16px;
             border-bottom: 2px solid rgba(var(--color-brown-600-rgb), 0.15);
         }
 
@@ -58,30 +58,30 @@
             font-size: 32px;
             font-weight: 700;
             color: var(--color-teal-500);
-            margin-bottom: 8px;
+            margin-bottom: 6px;
             display: inline-block;
             vertical-align: middle;
         }
 
         .brand-subtitle {
-            font-size: 16px;
+            font-size: 18px;
             color: var(--color-slate-500);
-            margin-bottom: 15px;
+            margin-bottom: 12px;
         }
 
         .copy-btn {
             background: var(--color-teal-500);
             color: white;
             border: none;
-            padding: 16px 40px;
-            font-size: 18px;
+            padding: 14px 32px;
+            font-size: 20px;
             font-weight: 700;
             border-radius: 12px;
             cursor: pointer;
             transition: all 0.3s ease;
             box-shadow: 0 4px 12px rgba(33, 128, 141, 0.3);
             width: 100%;
-            max-width: 480px;
+            max-width: 520px;
         }
 
         .copy-btn:hover {
@@ -99,16 +99,16 @@
         }
 
         .preview-section {
-            margin-top: 40px;
+            margin-top: 24px;
         }
 
         .content-preview {
             background: rgba(var(--color-brown-600-rgb), 0.05);
             border: 1px solid rgba(var(--color-brown-600-rgb), 0.15);
             border-radius: 12px;
-            padding: 24px;
-            font-size: 16px;
-            line-height: 1.9;
+            padding: 20px;
+            font-size: 20px;
+            line-height: 1.8;
             color: var(--color-slate-900);
             white-space: pre-wrap;
             word-wrap: break-word;
@@ -117,18 +117,18 @@
 
         .slogan {
             display: inline-block;
-            margin-bottom: 16px;
-            padding: 10px 18px;
+            margin-bottom: 14px;
+            padding: 8px 16px;
             border-radius: 999px;
             background: linear-gradient(90deg, #21808d, #1d7480);
             color: #ffffff;
-            font-size: 18px;
+            font-size: 20px;
             font-weight: 700;
             letter-spacing: 1px;
         }
 
         .brand-feature-1 {
-            font-size: 32px;
+            font-size: 28px;
         }
 
         .brand-feature-2 {
@@ -137,13 +137,13 @@
 
         .btn-link {
             display: inline-block;
-            padding: 10px 18px;
-            margin: 4px 6px 4px 0;
+            padding: 8px 16px;
+            margin: 4px 8px 4px 0;
             border-radius: 999px;
             background: var(--color-teal-500);
             color: #ffffff;
             text-decoration: none;
-            font-size: 14px;
+            font-size: 18px;
             font-weight: 700;
         }
 
@@ -152,11 +152,11 @@
         }
 
         .footer {
-            margin-top: 30px;
+            margin-top: 24px;
             text-align: center;
-            font-size: 14px;
+            font-size: 16px;
             color: var(--color-slate-500);
-            padding-top: 20px;
+            padding-top: 16px;
             border-top: 1px solid rgba(var(--color-brown-600-rgb), 0.15);
         }
 
@@ -167,7 +167,7 @@
             transform: translateX(-50%);
             background: #34c759;
             color: white;
-            padding: 16px 32px;
+            padding: 14px 24px;
             border-radius: 12px;
             font-weight: 700;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -182,7 +182,7 @@
 
         @media (max-width: 600px) {
             .container {
-                padding: 20px;
+                padding: 18px;
             }
             
             .brand-name {
@@ -190,11 +190,19 @@
             }
             
             .copy-btn {
-                font-size: 16px;
-                padding: 14px 32px;
+                font-size: 18px;
+                padding: 12px 24px;
             }
 
             .slogan {
+                font-size: 18px;
+            }
+
+            .content-preview {
+                font-size: 18px;
+            }
+
+            .btn-link {
                 font-size: 16px;
             }
         }
