--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>木曜漾品牌完整調查報告</title>    
+    <title>木曜漾 mokuyou - 台灣手搖飲/低卡義式霜淇淋專賣官方資訊網</title>
+    <meta property="og:title" content="木曜漾 mokuyou - 台灣手搖飲/低卡義式霜淇淋專賣官方資訊網" />
+    <meta property="og:description" content="完整品牌與會員資訊。使用台灣茶葉、光泉5.1濃豆漿、全台唯一霜淇淋保冰30分鐘外送。加入會員享受點數累積、折扣券、生日禮等優惠。" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mokuyou-tw.github.io/mokuyou-memberinfo/" />
+    <meta property="og:image" content="https://mokuyou-tw.github.io/mokuyou-memberinfo/assets/mokuyou-hero.png" />
+    <meta name="description" content="木曜漾 mokuyou 官方會員資訊網站。完整品牌介紹、會員制度、點數累積規則、折扣券方案、會員贈禮等資訊。" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="木曜漾 mokuyou - 台灣手搖飲/低卡義式霜淇淋專賣官方資訊網" />
+    <meta name="twitter:description" content="完整品牌與會員資訊。使用台灣茶葉、光泉5.1濃豆漿、全台唯一霜淇淋保冰30分鐘外送。" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet" />
