--- a/index.html
+++ b/index.html
@@ -190,30 +190,27 @@ Error generating stack: `+l.message+`
       while (wrap.firstChild) wrap.removeChild(wrap.firstChild);
 
       if (isDesktop()) {
-        const car = document.createElement('div');
-        car.style.display = 'flex';
-        car.style.gap = '16px';
-        car.style.overflowX = 'auto';
-        car.style.scrollSnapType = 'x mandatory';
-        car.style.padding = '6px 0 2px';
-        car.style.WebkitOverflowScrolling = 'touch';
+        const stack = document.createElement('div');
+        stack.style.display = 'flex';
+        stack.style.flexDirection = 'column';
+        stack.style.gap = '16px';
+        stack.style.alignItems = 'center';
+        stack.style.width = '100%';
 
-        DESKTOP_IMG_HREFS.forEach((src) => {
+        DESKTOP_IMG_HREFS.forEach((src, i) => {
           const im = document.createElement('img');
           im.src = src;
-          im.alt = '木曜漾完整菜單（桌機版）';
+          im.alt = `木曜漾完整菜單（第${i + 1}頁）`;
           im.loading = 'lazy';
-          im.style.flex = '0 0 auto';
-          im.style.width = 'min(92vw, 1200px)';
-          im.style.height = 'auto';
           im.style.display = 'block';
+          im.style.width = '100%';
+          im.style.height = 'auto';
           im.style.borderRadius = '18px';
           im.style.boxShadow = '0 10px 30px rgba(0,0,0,.12)';
-          im.style.scrollSnapAlign = 'center';
-          car.appendChild(im);
+          stack.appendChild(im);
         });
 
-        wrap.appendChild(car);
+        wrap.appendChild(stack);
       } else {
         const im = document.createElement('img');
         im.src = MOBILE_IMG_HREF;
@@ -292,36 +289,42 @@ const fallback = document.createElement('div');
     _scrollFixSnapshots.forEach(s => {
       try {
         s.el.style.overflowY = s.overflowY;
+        s.el.style.overflowX = s.overflowX;
         s.el.style.maxHeight = s.maxHeight;
         s.el.style.height = s.height;
-      } catch (_) {}
+      } catch (e) {}
     });
     _scrollFixSnapshots = [];
   };
   const applyScrollFix = (startEl) => {
     restoreScrollFix();
-    const snapshots = [];
-    let cur = startEl;
-    let guard = 0;
-    while (cur && cur !== document.body && guard < 12) {
-      guard++;
-      const cs = window.getComputedStyle(cur);
-      const oy = cs.overflowY;
-      const isScroll = (oy === 'auto' || oy === 'scroll');
-      if (isScroll) {
-        snapshots.push({
-          el: cur,
-          overflowY: cur.style.overflowY,
-          maxHeight: cur.style.maxHeight,
-          height: cur.style.height,
-        });
-        cur.style.overflowY = 'visible';
-        cur.style.maxHeight = 'none';
-        cur.style.height = 'auto';
+    try {
+      const snapshots = [];
+      let cur = startEl;
+      while (cur && cur !== document.body) {
+        const cs = window.getComputedStyle(cur);
+        const oy = cs.overflowY;
+        const ox = cs.overflowX;
+        const o = cs.overflow;
+        const isScrollY = (oy === 'auto' || oy === 'scroll' || o === 'auto' || o === 'scroll');
+        const isScrollX = (ox === 'auto' || ox === 'scroll' || o === 'auto' || o === 'scroll');
+        if (isScrollY || isScrollX) {
+          snapshots.push({
+            el: cur,
+            overflowY: cur.style.overflowY,
+            overflowX: cur.style.overflowX,
+            maxHeight: cur.style.maxHeight,
+            height: cur.style.height
+          });
+          if (isScrollY) cur.style.overflowY = 'visible';
+          if (isScrollX) cur.style.overflowX = 'visible';
+          cur.style.maxHeight = 'none';
+          cur.style.height = 'auto';
+        }
+        cur = cur.parentElement;
       }
-      cur = cur.parentElement;
-    }
-    _scrollFixSnapshots = snapshots;
+      _scrollFixSnapshots = snapshots;
+    } catch (e) {}
   };
 
   const ensureEmbed = () => {
